tests/js/invalid/booleans/true.buri
-- true is not a valid boolean by default

item = true